--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#ca2150</color>
-    <color name="colorPrimaryDark">#a0094a</color>
+    <color name="colorPrimaryDark">#959595</color>
     <color name="colorAccent">#D5D5D5</color>
 </resources>
