--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,10 @@
         <item name="android:windowBackground">@drawable/first_screen</item>
         <item name="colorPrimaryDark">@color/colorPrimary</item>
     </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style parent="@android:style/Widget.Spinner" name="SpinnerWithNoArrow">
+        <item name="android:background">@android:drawable/edit_text</item>
+    </style>
 </resources>
