--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,4 +18,13 @@
     <style parent="@android:style/Widget.Spinner" name="SpinnerWithNoArrow">
         <item name="android:background">@android:drawable/edit_text</item>
     </style>
+
+    <style name="fragment_register_edit_text_style">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:drawablePadding">@dimen/_8sdp</item>
+        <item name="android:layout_marginEnd">@dimen/_8sdp</item>
+        <item name="android:layout_marginStart">@dimen/_8sdp</item>
+        <item name="android:layout_marginTop">@dimen/_12sdp</item>
+    </style>
 </resources>
